--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,11 +27,17 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 33
     namespace 'be.tramckrijte.workmanager'
+    compileOptions {
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
         minSdkVersion 16
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
